Remove use of --add-modules ALL-SYSTEM